--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 <a href="stylesheet.css">style</a>
+<a href="main.css">main css</a>
+<a href="util.css">util css</a>
+<a href="jscode.js">jscode</a>
